src/index.css
@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 100;
    src: url('./assets/fonts/josefin-sans-v34-latin-100.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 200;
    src: url('./assets/fonts/josefin-sans-v34-latin-200.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 300;
    src: url('./assets/fonts/josefin-sans-v34-latin-300.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 400;
    src: url('./assets/fonts/josefin-sans-v34-latin-regular.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 500;
    src: url('./assets/fonts/josefin-sans-v34-latin-500.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 600;
    src: url('./assets/fonts/josefin-sans-v34-latin-600.woff2') format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    font-style: normal;
    font-weight: 700;
    src: url('./assets/fonts/josefin-sans-v34-latin-700.woff2') format('woff2');
    font-display: swap;
}

@import "tailwindcss";

@theme {
  --color-primary: #F8E9D5;
  --color-secondary: #181819;
  --color-content: #B5FED9;
  --color-primary-green: #4CAF50;
  --color-primary-blue: #45B6FE;
  --color-primary-yellow: #FFC107;
  --font-Josefin: "Josefin Sans", sans-serif;
}

html,
body,
#root,
.app {
    height: 100%;
    width: 100%;
    background-color: #181819;
    @apply text-primary scrollbar-hide;
}

@layer utilities {
    .swiper-hidden-cards .swiper-slide-prev,
    .swiper-hidden-cards .swiper-slide-next {
        @apply opacity-0 pointer-events-none transition-all duration-1000;
    }

    .swiper-hidden-cards .swiper-slide {
        @apply transition-all duration-1000 ease-in-out;
    }

    .swiper-hidden-cards .swiper-slide {
        @apply opacity-0 scale-90 pointer-events-none transition-all duration-500 ease-in-out;
    }

    .swiper-hidden-cards .swiper-slide-active {
        @apply opacity-100 scale-100 pointer-events-auto;
    }

    .scrollbar-hide {
        -ms-overflow-style: none; /* IE and Edge */
        scrollbar-width: none; /* Firefox */
    }
    .scrollbar-hide::-webkit-scrollbar {
        display: none; /* Chrome, Safari and Opera */
    }
}

@layer base {
    button, [role="button"] {
        cursor: pointer;
    }

    input[type="date"]::-webkit-calendar-picker-indicator {
        filter: invert(1);
        opacity: 0.8;
        cursor: pointer;
    }
}

